# todo

./: CMakeLists.txt  README.md  configure  configure_and_build  install.py
include/todo/: arg_parser.h  args.h  caller.h  config.h  printer.h  priority.h  todolist.h
scripts/: todo_completion.sh
src/: CMakeLists.txt  args.cpp  caller.cpp  config.cpp  main.cpp  printer.cpp  priority.cpp  todolist.cpp
